--- a/StrikingInvestigation/Pages/Privacy.razor
+++ b/StrikingInvestigation/Pages/Privacy.razor
@@ -13,10 +13,10 @@
     <br />
 
     <p>
-        Page width: @browserWidth px
+        Page width: @testSpec.BrowserWidth px
     </p>
 
     <p>
-        Page height: @browserHeight px
+        Page height: @testSpec.BrowserHeight px
     </p>
 </div>
