--- a/StrikingInvestigation/Pages/Submissions.razor
+++ b/StrikingInvestigation/Pages/Submissions.razor
@@ -47,7 +47,7 @@
                         <td class="align-middle" style="padding: 6px">@testSubmission.TestType</td>
                         <td class="align-middle" style="padding: 6px">@testSubmission.TestId</td>
                         <td class="align-middle" style="padding: 6px">@testSubmission.Gap</td>
-                        <td class="align-middle" style="padding: 6px">@testSubmission.AB</td>
+                        <td class="align-middle" style="padding: 6px">@testSubmission.ABResult</td>
                     </tr>
                 }
             </tbody>
