--- a/StrikingInvestigation/Shared/Bell.razor
+++ b/StrikingInvestigation/Shared/Bell.razor
@@ -27,7 +27,7 @@ else
     </div>
 }
 
-@if (Screen.ShowGaps == true && Blow.IsTestBell == false)
+@if (TestSpec.ShowGaps == true && Blow.IsTestBell == false)
 {
     <div class="gaplabel"
             style="--leftpos: @gapLabelLeftPosStr;
