--- a/StrikingInvestigation/Shared/Play.razor
+++ b/StrikingInvestigation/Shared/Play.razor
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Alt gap label -->
-    @if (Screen.ShowGaps == true && Blow.AltGap != 0)
+    @if (TestSpec.ShowGaps == true && Blow.AltGap != 0)
     {
         <div style="display: inline-block;
                 font-size: @altGapLabelFontSizeStr;
@@ -41,7 +41,7 @@
         <button class="btn btn-primary"
                 @onclick="GapMinusClick"
                 style="width: 75px"
-                disabled="@Screen.ControlsDisabled">
+                disabled="@TestSpec.ControlsDisabled">
             @gapMinusStr
         </button>
     </div>
@@ -63,7 +63,7 @@
         <button class="btn btn-primary"
                 @onclick="GapPlusClick"
                 style="width: 75px"
-                disabled="@Screen.ControlsDisabled">
+                disabled="@TestSpec.ControlsDisabled">
             @gapPlusStr
         </button>
     </div>
@@ -92,44 +92,3 @@
         </div>
     }
 </div>
-
-<!-- Submit row -->
-@if (Screen.SelectedTest != 0 && Screen.SelectedTest != -1)
-{
-    <div class="posabs"
-            style="--leftpos: @submitRowLeftPosStr;
-            --toppos: @submitRowTopPosStr">
-
-        <!-- Submit button -->
-        <div style="display: inline-block">
-            <button class="btn btn-primary"
-                    @onclick="SubmitClick"
-                    style="width: 75px"
-                    disabled="@Screen.ControlsDisabled">
-                @Screen.SubmitLabel
-            </button>
-        </div>
-
-        <!-- Submit spinner -->
-        @if (Screen.SpinnerSubmitting == true)
-        {
-            <div class="spinnerinline"
-                    style="display: inline-block;
-                    vertical-align: top;
-                    margin-left: 12px;
-                    margin-top: 7px;
-                    --borderwidth: 5px;
-                    --width: 24px;
-                    --height: 24px">
-            </div>
-        }
-
-        <!-- Submit message -->
-        @if (Screen.Submitted == true)
-        {
-            <div style="display: inline-block">
-                Submitted
-            </div>
-        }
-    </div>
-}
