--- a/StrikingInvestigation/Shared/Play.razor
+++ b/StrikingInvestigation/Shared/Play.razor
@@ -37,7 +37,8 @@
         --toppos: @buttonRowTopPosStr">
 
     <!-- Gap minus button -->
-    <div style="display: inline-block">
+    <div style="display: inline-block;
+            margin-right: 6px">
         <button class="btn btn-primary"
                 @onclick="GapMinusClick"
                 style="width: 75px"
@@ -48,6 +49,7 @@
 
     <!-- Current gap label -->
     <div style="display: inline-block;
+            margin-right: 6px;
             width: 50px;
             height: 38px;
             border: 1px solid black;
@@ -59,7 +61,8 @@
     </div>
 
     <!-- Gap plus button -->
-    <div style="display: inline-block">
+    <div style="display: inline-block;
+            margin-right: 6px">
         <button class="btn btn-primary"
                 @onclick="GapPlusClick"
                 style="width: 75px"
